--- a/src/html/admin-edit.html
+++ b/src/html/admin-edit.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<title>欢迎页面-X-admin2.0</title>
@@ -94,120 +95,138 @@
 		<script type="text/javascript" src="../js/xadmin.js"></script>
 		<script type="text/javascript" src="../lib/common.js"></script>
 		<script>
-			var renderdata = '';
-			if(Cookie.get('data')) {
-				renderdata = Cookie.get('data');
-				renderdata = JSON.parse(renderdata);
+			var _id = '';
+			if(Cookie.get('_id')) {
 
-				$('#username2').val(renderdata.username);
-				$('#phone2').val(renderdata.tel);
-				$('#L_email2').val(renderdata.email);
-				$('#L_pass2').val(renderdata.password);
-				$('#L_repass2').val(renderdata.password);
+				_id = Cookie.get('_id');
 
-				var isok1 = true;
-				$('#username2').blur(() => {
-					var val = $('#username2').val();
-					var strs = checkReg.trim(val);
-					console.log(strs);
+				$.ajax({
+					type: 'get',
+					url: 'http://localhost:3008/addAdmin/checkid',
+					// url: '/addAdmin/checkid',
+					async: true,
+					data: {
+						'_id': _id
+					},
+					success: function(str) {
+						// console.log(str);
+						var renderdata = str.data;
+						console.log(renderdata);
+						// x_admin_show('','./admin-list.html');
 
-					if(strs) {
-						$.ajax({
-							type: 'get',
-							url: 'http://localhost:3008/addAdmin/checkname',
-							// url: '/addAdmin/checkname',
-							async: true,
-							data: {
-								'username': strs
-							},
-							success: (str) => {
-								if(str.code == '1') {
-									if(renderdata.username == str.data.username) {
-										console.log(1);
-										isok1 = true;
-									} else {
-										console.log('same');
-										$('#userInfor').html('该登录名已存在');
-										$('#userInfor').css('color', 'red');
-										isok1 = false;
+						$('#username2').val(renderdata.username);
+						$('#phone2').val(renderdata.tel);
+						$('#L_email2').val(renderdata.email);
+						$('#L_pass2').val(renderdata.password);
+						$('#L_repass2').val(renderdata.password);
+
+						var isok1 = true;
+						$('#username2').blur(() => {
+							var val = $('#username2').val();
+							var strs = checkReg.trim(val);
+							console.log(strs);
+
+							if(strs) {
+								$.ajax({
+									type: 'get',
+									url: 'http://localhost:3008/addAdmin/checkname',
+									// url: '/addAdmin/checkname',
+									async: true,
+									data: {
+										'username': strs
+									},
+									success: (str) => {
+										if(str.code == '1') {
+											if(renderdata.username == str.data.username) {
+												console.log(1);
+												isok1 = true;
+											} else {
+												console.log('same');
+												$('#userInfor').html('该登录名已存在');
+												$('#userInfor').css('color', 'red');
+												isok1 = false;
+											}
+
+										} else {
+											isok1 = true;
+										}
 									}
-
-								} else {
-									isok1 = true;
-								}
+								});
+							} else {
+								$('#userInfor').html('登录名不符合规则');
+								$('#userInfor').css('color', 'red');
+								isok1 = false;
 							}
 						});
-					} else {
-						$('#userInfor').html('登录名不符合规则');
-						$('#userInfor').css('color', 'red');
-						isok1 = false;
-					}
-				});
-				
-				var role = '';
-				$('#role input').eq(0).prop('checked', 'checked');
-				for(var i = 0; i < $('#role input').size(); i++) {
-					if($('#role input').eq(i).data('names') == renderdata.role) {
-						$('#role input').eq(i).prop('checked', 'checked');
-					}
-				}
 
-				$('#role input').click(function() {
-					console.log($(this));
-					$(this).prop('checked', 'checked');
-					role = $(this).data('names');
-				});
-
-				layui.use(['form', 'layer'], function() {
-					$ = layui.jquery;
-					var form = layui.form,
-						layer = layui.layer;
-
-					form.verify({
-						username: [/^[a-zA-Z][\w\-]{2,19}$/, '登录名以字母开头，3-20位'],
-						pass: [/(.+){6,12}$/, '密码必须6到12位'],
-						repass: function(value) {
-							if($('#L_pass').val() != $('#L_repass').val()) {
-								return '两次密码不一致';
+						var role = renderdata.role;
+						$('#role input').eq(0).prop('checked', 'checked');
+						for(var i = 0; i < $('#role input').size(); i++) {
+							if($('#role input').eq(i).data('names') == renderdata.role) {
+								$('#role input').eq(i).prop('checked', 'checked');
 							}
 						}
-					});
 
-					// 监听提交
-					form.on('submit(add)', function() {
-						if(isok1) {
-							$.ajax({
-								type: 'post',
-								url: 'http://localhost:3008/addAdmin/update',
-								// url: '/addAdmin/update',
-								async: true,
-								data: {
-									'username': $('#username2').val(),
-									'password': $('#L_pass2').val(),
-									'role': role,
-									'tel': $('#phone2').val(),
-									'email': $('#L_email2').val(),
-									'_id': renderdata._id
-								},
-								success: function(str) {
-									console.log(str);
-									// x_admin_show('','./admin-list.html');
-									layer.alert("更新成功", {
-										icon: 6
-									}, function() {
-										var index = parent.layer.getFrameIndex(window.name);
-										window.parent.location.reload();
-										parent.layer.close(index);
-									});
+						$('#role input').click(function() {
+							console.log($(this));
+							$(this).prop('checked', 'checked');
+							role = $(this).data('names');
+						});
+
+						layui.use(['form', 'layer'], function() {
+							$ = layui.jquery;
+							var form = layui.form,
+								layer = layui.layer;
+
+							form.verify({
+								username: [/^[a-zA-Z][\w\-]{2,19}$/, '登录名以字母开头，3-20位'],
+								pass: [/(.+){6,12}$/, '密码必须6到12位'],
+								repass: function(value) {
+									if($('#L_pass').val() != $('#L_repass').val()) {
+										return '两次密码不一致';
+									}
 								}
 							});
-						} else {
-							console.log('请输入完整信息');
-							return false;
-						}
-					});
+
+							// 监听提交
+							form.on('submit(add)', function() {
+								if(isok1) {
+									$.ajax({
+										type: 'post',
+										url: 'http://localhost:3008/addAdmin/update',
+										// url: '/addAdmin/update',
+										async: true,
+										data: {
+											'username': $('#username2').val(),
+											'password': $('#L_pass2').val(),
+											'role': role,
+											'tel': $('#phone2').val(),
+											'email': $('#L_email2').val(),
+											'_id': renderdata._id
+										},
+										success: function(str) {
+											console.log(str);
+											// x_admin_show('','./admin-list.html');
+											layer.alert("更新成功", {
+												icon: 6
+											}, function() {
+												var index = parent.layer.getFrameIndex(window.name);
+												window.parent.location.reload();
+												parent.layer.close(index);
+											});
+										}
+									});
+								} else {
+									console.log('请输入完整信息');
+									return false;
+								}
+							});
+						});
+
+					}
 				});
 			};
 		</script>
 	</body>
+
 </html>
