--- a/src/html/good-add.html
+++ b/src/html/good-add.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
 		<link rel="stylesheet" href="../css/good.css">
+
 	</head>
 
 	<body>
@@ -24,14 +25,14 @@
 				</div>
 				<div class="layui-form-item">
 					<label for="price" class="layui-form-label">
-                  <!-- <span class="x-red">*</span> -->现价
+                 	现价
               </label>
 					<div class="layui-input-inline">
 						<input type="text" id="price" name="price" required="" lay-verify="required" autocomplete="off" class="layui-input">
 					</div>
 
 					<label for="original" class="layui-form-label original">
-                  <!-- <span class="x-red">*</span> -->原价
+                 	原价
               </label>
 					<div class="layui-input-inline">
 						<input type="text" id="original" name="original" required="" lay-verify="required" autocomplete="off" class="layui-input">
@@ -39,7 +40,7 @@
 				</div>
 				<div class="layui-form-item">
 					<label for="category" class="layui-form-label">
-                  <!-- <span class="x-red">*</span> -->商品类别
+                 	商品类别
               </label>
 					<div class="layui-input-inline">
 						<select id="category" name="contrller">
@@ -57,7 +58,7 @@
 				</div>
 				<div class="layui-form-item">
 					<label for="goodNum" class="layui-form-label">
-                  <!-- <span class="x-red">*</span> -->库存
+                  	库存
               </label>
 					<div class="layui-input-inline">
 						<input type="text" id="goodNum" name="goodNum" required="" lay-verify="required" autocomplete="off" class="layui-input">
@@ -66,8 +67,8 @@
 
 				<div id="imgBox" class="layui-form-item layui-form-text">
 					<label for="desc" class="layui-form-label">
-                	 商品图片
-              </label>
+                  	商品图片
+             </label>
 
 					<div class="layui-upload">
 						<button type="button" class="layui-btn" id="test2">图片上传</button>
@@ -109,7 +110,7 @@
 				</div>
 				<div class="layui-form-item layui-form-text">
 					<label for="desc" class="layui-form-label">
-                  	描述
+                 	 描述
               </label>
 					<div class="layui-input-block">
 						<textarea placeholder="请输入内容" id="desc" name="desc" class="layui-textarea"></textarea>
@@ -118,165 +119,125 @@
 				<div class="layui-form-item">
 					<label for="L_repass" class="layui-form-label">
              </label>
-					<input type="button" class="layui-btn" id="addGood" lay-filter="add" lay-submit="" value="更新">
+					<input type="button" class="layui-btn" id="addGood" lay-filter="add" lay-submit="" value="添加">
 				</div>
 			</form>
 		</div>
-
 		<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 		<script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-		<script type="text/javascript" src="../lib/common.js"></script>
 		<script type="text/javascript" src="../js/xadmin.js"></script>
 		<script>
-			var _id = '';
-			if(Cookie.get('_id')) {
-				_id = Cookie.get('_id');
+			let upImgUrl = '';
+			layui.use('upload', function() {
+				var $ = layui.jquery,
+					upload = layui.upload;
 
-				$.ajax({
-					type: 'get',
-					url: 'http://localhost:3008/good/checkid',
-					// url: '/addAdmin/checkid',
-					async: true,
-					data: {
-						'_id': _id
+				//多图片上传
+				upload.render({
+					elem: '#test2',
+					url: '/upload',
+					multiple: true,
+					before: function(obj) {
+						//预读本地文件示例，不支持ie8
+						obj.preview(function(index, file, result) {
+							$('#demo2').append('<img src="' + result + '" alt="' + file.name + '" class="layui-upload-img">')
+						});
 					},
-					success: function(str) {
-						// console.log(str);
-						var renderdata = str.data;
-						console.log(renderdata);
-						// x_admin_show('','./admin-list.html');
-
-						$('#title').val(renderdata.name);
-						$('#price').val(renderdata.price);
-						$('#original').val(renderdata.original);
-						$('#category').val(renderdata.category);
-						$('#goodNum').val(renderdata.total);
-						$('#desc').val(renderdata.desc);
-
-						let activity = renderdata.activity;
-						let status = renderdata.status;
-						let upImgUrl = renderdata.upImgUrl;
-
-						for(var i = 0; i < $('#activity input').length; i++) {
-							if($('#activity input').eq(i).data('names') == renderdata.activity) {
-								$('#activity input').eq(i).prop('checked', 'checked');
-							}
-						}
-
-						$('#activity input').click(function() {
-							console.log($(this));
-							$(this).prop('checked', 'checked');
-							activity = $(this).data('names');
-						});
-
-						let imgArr = (renderdata.upImgUrl).split('&').slice(0, -1);
-						console.log(imgArr);
-
-						for(var i = 0; i < imgArr.length; i++) {
-							var html = '<img src="../' + imgArr[i] + '" alt="" class="layui-upload-img">';
-							$('#demo2').html(html + $('#demo2').html());
-						}
-
-						var ischeck = true;
-						if(renderdata.status == '上架') {
-							$('#status input').prop('checked', 'checked');
-							status = '上架';
-							ischeck = false;
-						} else {
-							$('#status input').removeAttr('checked');
-							status = '下架';
-							ischeck = true;
-						}
-
-						$('#status').on('click', '.layui-form-switch', function() {
-							if(ischeck) {
-								$('#status input').prop('checked', 'checked');
-								status = '上架';
-							} else {
-								$('#status input').removeAttr('checked');
-								status = '下架';
-							}
-							ischeck = !ischeck;
-						})
-
-						layui.use('upload', function() {
-							var $ = layui.jquery,
-								upload = layui.upload;
-
-							//多图片上传
-							upload.render({
-								elem: '#test2',
-								url: '/upload',
-								multiple: true,
-								before: function(obj) {
-									//预读本地文件示例，不支持ie8
-									obj.preview(function(index, file, result) {
-										$('#demo2').append('<img src="' + result + '" alt="' + file.name + '" class="layui-upload-img">')
-									});
-								},
-								done: function(res) {
-									//上传完毕
-									console.log(res);
-									// var obj=JSON.parse(res);
-									// console.log(obj);
-									imgData = res.data;
-									imgUrl = imgData[0].path;
-									console.log(upImgUrl);
-									upImgUrl = upImgUrl + imgUrl + '&';
-									console.log(upImgUrl);
-								}
-							});
-
-						});
-
-						layui.use(['form', 'layer'], function() {
-							$ = layui.jquery;
-							var form = layui.form,
-								layer = layui.layer;
-							// 监听提交
-							form.on('submit(add)', function() {
-								// if (isok1) {
-								$.ajax({
-									type: 'post',
-									url: 'http://localhost:3008/good/updategood',
-									// url: '/addAdmin/update',
-									async: true,
-									data: {
-										'name': $('#title').val(),
-										'price': $('#price').val(),
-										'original': $('#original').val(),
-										'category': $('#category').val(),
-										'total': $('#goodNum').val(),
-										'desc': $('#desc').val(),
-										'activity': activity,
-										'status': status,
-										'upImgUrl': upImgUrl,
-										'_id': renderdata._id
-									},
-									success: function(str) {
-										console.log(str);
-										// x_admin_show('','./admin-list.html');
-										layer.alert("更新成功", {
-											icon: 6
-										}, function() {
-											// 获得frame索引
-											var index = parent.layer.getFrameIndex(window.name);
-
-											window.parent.location.reload(); //刷新父页面
-											//关闭当前frame
-											parent.layer.close(index);
-										});
-									}
-								});
-								return false;
-							});
-
-						});
-
+					done: function(res) {
+						//上传完毕
+						console.log(res);
+						// var obj=JSON.parse(res);
+						// console.log(obj);
+						imgData = res.data;
+						upImgUrl = imgData[0].path + '&' + upImgUrl;
+						console.log(upImgUrl);
 					}
 				});
-			};
-			// };
+
+			});
+
+			var activity = '';
+			var status = '';
+			var url = '';
+			var category = '';
+
+			// 判断商品活动
+			$('#activity input').eq(0).prop('checked', 'checked');
+			// console.log($('#activity input').eq(0).prop('checked'));
+			activity = $('#activity input').eq(0).data('names');
+			// console.log(activity);
+			$('#activity input').click(function() {
+				console.log($(this));
+				$(this).prop('checked', 'checked');
+				activity = $(this).data('names');
+				// console.log(activity);
+			});
+
+			// 判断商品状态
+			$('#status input').prop('checked', 'checked');
+			// $('#status .layui-form-switch').addClass('layui-form-onswitch');
+			status = '上架';
+
+			var ischeck = false;
+
+			$('#status').on('click', '.layui-form-switch', function() {
+				if(ischeck) {
+					$('#status input').prop('checked', 'checked');
+					status = '上架';
+				} else {
+					$('#status input').removeAttr('checked');
+					status = '下架';
+				}
+				ischeck = !ischeck;
+			})
+
+			// layui-unselect layui-form-switch layui-form-onswitch
+			// 点击添加商品
+			layui.use(['form', 'layer'], function() {
+				$ = layui.jquery;
+				var form = layui.form,
+					layer = layui.layer;
+				var isok1 = true;
+
+				// 监听提交
+				form.on('submit(add)', function() {
+					// console.log(123456);
+					if(isok1) {
+						$.ajax({
+							type: 'post',
+							url: 'http://localhost:3008/good/addgood',
+							// url: '/addAdmin/addname',
+							async: true,
+							data: {
+								'name': $('#title').val(),
+								'price': $('#price').val(),
+								'original': $('#original').val(),
+								'category': $('#category').val(),
+								'total': $('#goodNum').val(),
+								'activity': activity,
+								'desc': $('#desc').val(),
+								'status': status,
+								'upImgUrl': upImgUrl
+							},
+							success: function(str) {
+								console.log(str);
+								layer.alert("添加成功", {
+									icon: 6
+								}, function() {
+									// 获得frame索引
+									var index = parent.layer.getFrameIndex(window.name);
+									window.parent.location.reload(); //刷新父页面
+									//关闭当前frame
+									parent.layer.close(index);
+								});
+							}
+						});
+					} else {
+						return false
+					}
+				});
+
+			});
 		</script>
 
 	</body>
